--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,235 +1,16 @@
-#unity-container {
-  position: absolute;
-}
-#unity-container.unity-desktop {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-#unity-container.unity-mobile {
-  width: 100%;
-  height: 100%;
-}
-#unity-canvas {
-  background: #f582ff;
-  background: linear-gradient(
-    20deg,
-    rgba(245, 130, 255, 1) 2%,
-    rgba(91, 118, 255, 1) 51%,
-    rgba(143, 175, 255, 1) 100%
-  );
-}
-.unity-mobile #unity-canvas {
-  width: 100%;
-  height: 100%;
-}
-#unity-loading-bar {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: none;
-}
-#unity-logo {
-  width: 154px;
-  height: 130px;
-  background: url("unity-logo-light.png") no-repeat center;
-}
-#unity-progress-bar-empty {
-  width: 141px;
-  height: 18px;
-  margin-top: 10px;
-  margin-left: 6.5px;
-  background: url("progress-bar-empty-light.png") no-repeat center;
-}
-#unity-progress-bar-full {
-  width: 0%;
-  height: 18px;
-  margin-top: 10px;
-  background: url("progress-bar-full-light.png") no-repeat center;
-}
-#unity-footer {
-  position: relative;
-}
-.unity-mobile #unity-footer {
-  display: none;
-}
-#unity-webgl-logo {
-  float: left;
-  width: 204px;
-  height: 38px;
-  background: url("webgl-logo.png") no-repeat center;
-}
-#unity-build-title {
-  float: right;
-  margin-right: 10px;
-  line-height: 38px;
-  font-family: arial;
-  font-size: 18px;
-}
-#unity-fullscreen-button {
-  float: right;
-  width: 38px;
-  height: 38px;
-  background: url("fullscreen-button.png") no-repeat center;
-}
-#unity-warning {
-  position: absolute;
-  left: 50%;
-  top: 5%;
-  transform: translate(-50%);
-  background: white;
-  padding: 10px;
-  display: none;
-}
-
-html {
-  height: -webkit-fill-available;
-}
-
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  background-color: black;
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  overflow: hidden;
-}
-
-@keyframes smoothBounceIn {
-  0% {
-    opacity: 0.5;
-    transform: scale(0.9) translateY(-40px);
-  }
-  40% {
-    opacity: 1;
-    transform: scale(1.03) translateY(10px);
-  }
-  70% {
-    transform: scale(0.97) translateY(-4px);
-  }
-  100% {
-    transform: scale(1) translateY(0);
-  }
-}
-
-@keyframes smoothBounceOut {
-  0% {
-    opacity: 1;
-    transform: scale(1) translateY(0);
-  }
-  40% {
-    opacity: 0.7;
-    transform: scale(1.05) translateY(-10px);
-  }
-  80% {
-    opacity: 0.3;
-    transform: scale(0.95) translateY(10px);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0.9) translateY(40px);
-  }
-}
-
-.ctaDiv {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  margin: 4rem;
-  background-color: #ffffff1e;
-  border-radius: 15px;
-  z-index: 99;
-  animation: smoothBounceIn 0.9s cubic-bezier(0.22, 1, 0.36, 1);
-}
-
-.ctaDiv.exit {
-  animation: smoothBounceOut 1s cubic-bezier(0.22, 1, 0.36, 1);
-}
-
-h1,
-.allow-button {
-  font-family: "Jaro", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-h1 {
-  background-color: #231f20af;
-  color: white;
-  width: 19rem;
-  border-radius: 10px;
-  font-size: 20px;
-  padding: 10px 15px;
-  margin: 0;
-}
-
-.allow-button {
-  border: none;
-  padding: 10px 15px;
-  color: white;
-  background-color: #231f20;
-  border-radius: 15px;
-  margin: 1rem 0rem;
-}
-
-.popup-text {
-  margin: 1rem 2rem;
-  padding-top: 1rem;
-  opacity: 100%;
-  text-shadow: 2px 2px 2px rgba(20, 22, 20, 20);
-  color: rgb(255, 251, 0);
-}
-
-/*Vanta background*/
-
-#vanta-bg {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  z-index: -100;
-  top: 0;
-  left: 0;
-}
-
-/*MEDIA QUERIES*/
-/* For screens larger than 1200px (desktop) */
-@media (min-width: 1200px) {
-  h1 {
-    font-size: 24px;
-    width: 48rem;
-  }
-  .ctaDiv {
-    margin: 5rem;
-  }
-}
-
-/* For screens between 768px and 1199px (tablets) */
-@media (min-width: 768px) and (max-width: 1199px) {
-  h1 {
-    font-size: 22px;
-    width: 40rem;
-  }
-  .ctaDiv {
-    margin: 3rem;
-  }
-}
-
-/* For screens between 576px and 767px (smaller tablets) */
-@media (min-width: 576px) and (max-width: 767px) {
-  h1 {
-    font-size: 20px;
-    width: 30rem;
-  }
-  .ctaDiv {
-    margin: 2rem;
-  }
-}
+body { padding: 0; margin: 0 }
+#unity-container { position: absolute }
+#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
+#unity-container.unity-mobile { width: 100%; height: 100% }
+#unity-canvas { background: #231F20 }
+.unity-mobile #unity-canvas { width: 100%; height: 100% }
+#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
+#unity-logo { width: 154px; height: 130px; background: url('unity-logo-light.png') no-repeat center }
+#unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-light.png') no-repeat center }
+#unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-light.png') no-repeat center }
+#unity-footer { position: relative }
+.unity-mobile #unity-footer { display: none }
+#unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
+#unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
+#unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
+#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
